# sre-agent

./: .env.example  .gitignore  README.md  pyproject.toml
cli/: auth.py  client.py  config.py  main.py
docs/: design.md  requirements.md  technical-spec.md
docs/adr/: 001-three-tier-architecture.md  002-google-adk-gemini.md  003-fastmcp-streamable-http.md  004-mcp-server-deployment.md  005-session-management.md  006-authentication.md  README.md
mcp_server/: function_app.py
mcp_server/mock/: alerts.json  cost.json
mcp_server/tools/: alerts.py  cost.py
orchestrator/: agent.py  auth.py  config.py  main.py  mcp_client.py  runner.py
tests/: test_cli.py  test_mcp_tools.py  test_orchestrator.py
