[project]
name = "sre-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # MCP Server
    "fastmcp>=2.0",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-costmanagement>=4.0",
    "azure-identity>=1.19",
    # Orchestrator
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-adk>=1.0",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.6",
    # CLI
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.9",
]

[project.scripts]
sre-agent = "cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "orchestrator", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
